# walstream

./: Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  docker-compose.yml
.github/workflows/: docker.yml
docker-entrypoint-initdb.d/: create-publication.sh
examples/go-client/: README.md  compile_protobuf.sh  go.mod  main.go
examples/js-client/: README.md  index.js  package-lock.json  package.json
examples/python-client/: .gitignore  README.md  compile_protobuf.sh  main.py  pyproject.toml
examples/rust-client/: Cargo.toml  README.md  build.rs
examples/rust-client/src/: main.rs
examples/ts-client/: README.md  compile_protobuf.sh  index.ts  package-lock.json  package.json  tsconfig.json
proto/: plugin.proto
src/: cli.rs  event_stream.rs  grpc.rs  main.rs  postgres.rs
