[package]
name = "walstream"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
postgres-replication = { git = "https://github.com/MaterializeInc/rust-postgres", rev = "c4b473b478b3adfbf8667d2fbe895d8423f1290b" }
tokio-postgres = { git = "https://github.com/MaterializeInc/rust-postgres", rev = "c4b473b478b3adfbf8667d2fbe895d8423f1290b" }
bytes = "1.11.0"
futures = "0.3.31"
serde_json = "1.0.145"
tonic = "0.14.2"
prost = "0.14.1"
tonic-prost = "0.14.2"
tokio-stream = "0.1.17"
clap = { version = "4.5.53", features = ["derive", "env"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter"] }

[build-dependencies]
tonic-build = "0.14.2"
tonic-prost-build = "0.14.2"

[profile.release]
opt-level = "z"          # Optimize for size
lto = true               # Full link-time optimization
codegen-units = 1        # Better optimization, slower build
strip = true             # Strip symbols automatically (nightly or Rust 1.76+)
panic = "abort"          # Remove unwinding runtime
